kafka_replicator_nginx_flink/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kafka.<DOMAIN>
        - b0.<DOMAIN>
        - b1.<DOMAIN>
        - b2.<DOMAIN>
        - controlcenter.<DOMAIN>
        - schemaregistry.<DOMAIN>
        - connect.<DOMAIN>
  rules:
    - host: kafka.<DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-bootstrap
                port: 
                  number: 9092
    - host: b0.<DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: kafka-0-internal
                port:
                  number: 9092
    - host: b1.<DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-1-internal
                port: 
                  number: 9092
    - host: b2.<DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-2-internal
                port: 
                  number: 9092
    - host: controlcenter.<DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-0-internal
                port: 
                  number: 9021
    - host: schemaregistry.<DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sr-bootstrap
                port: 
                  number: 8081
    - host: connect.<DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connect-bootstrap
                port: 
                  number: 8083
